# tetris_rs

./: .env  Cargo.toml  LICENCE  color.scss  config.yaml  ok.sh  readme.md
src/: bricks.rs  display.rs  env.rs  game.rs  main.rs  record.rs
