[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
colored = "2.0.0"
termion = "*"
rand = "*"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.4"
futures = "0.3.26"
