[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

homepage = "https://github.com/kunieone/tetris_rs"


authors = ["starevan <kunieone@163.com>"]
description = "tetris game written in rust."
keywords = ["game", "tetris", "rust"]
categories = ["parsing"]
readme = "readme.md"
license = "MIT"
repository = "https://github.com/kunieone/tetris_rs"


[[bin]]
edition = "2021"
name = "tetris"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
termion = "2.0.1"
dotenv = "0.15.0"
[dependencies.crossterm]
features = ["event-stream"]
version = "0.26.0"


[profile.release]
lto = true
